--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"preview": "vite preview",
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
-		"test:e2e": "playwright test"
+		"test:e2e": "playwright test",
+		"postinstall": "patch-package"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.45.3",
@@ -19,11 +20,18 @@
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.49",
 		"svelte": "^5.0.0",
+		"svelte-piano": "^0.1.1",
 		"tailwindcss": "^3.4.17",
 		"vite": "^5.4.11",
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
-		"@inlang/paraglide-sveltekit": "^0.11.1"
+		"@inlang/paraglide-sveltekit": "^0.11.1",
+		"patch-package": "^8.0.0"
+	},
+	"overrides": {
+		"svelte-piano": {
+			"tone": "14.7.77"
+		}
 	}
 }
